--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,15 @@
-/*=============== Google Fonts ===============*/
 @import url("https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap");
 
 /*=============== Variables CSS ===============*/
 :root {
-  /*========== Colors ==========*/
-  /*Color mode HSL(hue, saturation, lightness)*/
+  /* Light theme */
   --first-color: hsl(353, 100%, 65%);
   --title-color: hsl(0, 0%, 0%);
   --text-color: hsl(244, 16%, 43%);
   --body-color: hsl(0, 0%, 99%);
   --container-color: #fff;
 
-  /*========== Font and Typography ==========*/
-  /*.5rem = 8px | 1rem = 16px ...*/
+  /* Font and Typography */
   --body-font: "Rubik", sans-serif;
   --h1-font-size: 2.25rem;
   --h2-font-size: 1.5rem;
@@ -21,16 +18,25 @@
   --small-font-size: 0.875rem;
   --smaller-font-size: 0.813rem;
 
-  /*========== Font Weight ==========*/
+  /* Font Weight */
   --font-medium: 500;
   --font-semibold: 600;
   --font-bold: 700;
 
-  /*========== Box Shadow ==========*/
+  /* Box Shadow */
   --shadow: 0px 5px 20px 0px rgb(69 67 96 / 10%);
 
-  /*========== Border Radius ==========*/
+  /* Border Radius */
   --border-radius: 20px;
+}
+
+/* Dark theme */
+[data-theme='dark'] {
+  --first-color: hsl(353, 100%, 65%);
+  --title-color: hsl(0, 0%, 100%);
+  --text-color: hsl(0, 0%, 85%);
+  --body-color: hsl(244, 16%, 20%);
+  --container-color: hsl(244, 16%, 30%);
 }
 
 /* Responsive typography */
@@ -98,7 +104,7 @@ img {
   vertical-align: middle;
 }
 
-/*=============== Resuable CSS Classes ===============*/
+/*=============== Reusable CSS Classes ===============*/
 .container {
   max-width: 1080px;
   padding-left: 15px;
