--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -1,6 +1,6 @@
 .home {
   position: relative;
-  min-height: 100vh;
+  min-height: 70vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -14,8 +14,8 @@
 
 .home__img {
   margin-bottom: 1.5rem;
-  width: 400px;
-  height: 400px;
+  width: 300px;
+  height: 300px;
   object-fit: cover;
   border-radius: 100%;
 }
@@ -24,6 +24,11 @@
   font-size: var(--h1-font-size);
   font-weight: var(--font-bold);
   margin-bottom: 0.5rem;
+}
+
+.home__title {
+  font-size: 1rem;
+  font-weight: 400;
 }
 
 .home__socials {
