--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -14,6 +14,22 @@
   transition: .3s;
 }
 
+.nav__img {
+  width: 30px;
+  height: 30px  ;
+  object-fit: cover;
+  border-radius: 100%;
+}
+
+.theme-toggle i {
+  transition: color 0.3s;
+}
+
+.theme-toggle i:hover {
+  color: hsl(43, 100%, 68%);
+}
+
+
 .nav__list {
   display: flex;
   flex-direction: column;
@@ -54,9 +70,26 @@
   transition: .3s;
 }
 
+.theme-toggle {
+  background: none;
+  border: none;
+  cursor: pointer;
+  color: var(--title-color);
+  font-size: 1.5rem;
+  margin-top: 1rem;
+}
+
+.theme-toggle i {
+  transition: color 0.3s;
+}
+
+.theme-toggle i:hover {
+  color: hsl(43, 100%, 68%);
+}
+
 @media screen and (max-width: 1024px) {
   .aside {
-      left: -110px;
+    left: -110px;
   }
 
   .nav__toggle {
